; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/libntp/extr_ymd2yd.c_ymd2yd.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/libntp/extr_ymd2yd.c_ymd2yd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ymd2yd(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %4, align 4
  %8 = sub nsw i32 %7, 1
  %9 = load i32, i32* %5, align 4
  %10 = sub nsw i32 %9, 1
  %11 = load i32, i32* %6, align 4
  %12 = sub nsw i32 %11, 1
  %13 = call i32 @ntpcal_edate_to_yeardays(i32 %8, i32 %10, i32 %12)
  %14 = add nsw i32 %13, 1
  ret i32 %14
}

declare dso_local i32 @ntpcal_edate_to_yeardays(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
